# list-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  README_inside.md  add_latency.sh  add_latency_broker.sh  base.yml  brokers.yml  consumer-test-pg.yml  consumer.yml  data-example.md  docker-compose-mysql.yml  docker-compose.yml  load_module.sh  my-consumer.yml  my-consumers.yml  mysql.yml  pg-consumer.yml  pgsql.yml  postgres.yml  pyproject.toml  seeder.yml  tester.yml
docker/: docker-compose.yml
docker/pgsql/: Dockerfile  init.sql
docker/python/: Dockerfile
examples/: connector.py  consumer.py
kafka/: Dockerfile
kafka-project/: consumer.py  pyproject.toml
list_sync/connector/: __init__.py  base_connector.py  mysql_connector.py  pgsql_connector.py
list_sync/consumer/: consumer.py
list_sync/consumer/writer/: __init__.py  csv_writer.py
mysql/: Dockerfile  init.sql  my.cnf
pgsql/: Dockerfile  init.sql
pystream/connector/: __init__.py  base_connector.py  mysql_connector.py  pgsql_connector.py
pystream/connector/producer/: __init__.py  producer.py
python/: README.md  pyproject.toml  setup.py
python/kafka-project/: .gitignore  README.md  poetry.toml  pyproject.toml
python/kafka-project/src/: consumer.py  csv_writer.py  dummy_seeder.py  mysql_connector.py  pgsql_connector.py  producer.py
python/kafka-project/test/: seeder.py
python/kafka-project/test/seed/: base_seeder.py  seeder-mysql.py  seeder-pgsql.py
python/pystream/connector/: __init__.py  mysql_connector.py  pgsql.py  pgsql_connector.py
python/pystream/connector/producer/: __init__.py
python/pystream/consumer/: __init__.py
python/pystream/consumer/writer/: csv_writer.py
python/pystream/proto/: message.proto  message_pb2.py
python/src/: consumer.py  pgsql_connector.py  producer.py  pyproject.toml
python/test/: base_test_producer.py  test_consumer.py  test_producer.py  test_producer_mysql.py  test_producer_pgsql.py
python/test/seed/: base_seeder.py  seeder_mysql.py  seeder_pgsql.py
test/: base_test_producer.py  test_consumer.py  test_consumer_pgsql.py  test_producer_mysql.py  test_producer_pgsql.py
test/seed/: seeder_pgsql.py
