[project]
authors = [
    { name = "Stefano Babini", email = "stefano.babini5@studio.unibo.it" },
]
name = "list_sync"
version = "0.1.0"
description = "list_sync is a Python-based system designed for Change Data Capture (CDC) from relational databases to Apache Kafka. It supports both MySQL and PostgreSQL as data sources, providing real-time streaming of database changes through a distributed system architecture while maintaining data consistency and fault tolerance."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "confluent-kafka>=2.8.0,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "mysql-replication (>=1.0.9,<2.0.0)",
    "mysql-connector-python (>=9.1.0,<9.2.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
