[tool.poetry]
authors = ["Stefano Babini <stefano.babini5@studio.unibo.it>"]
name = "kafka-project"
packages = [{ include = "src" }]
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
confluent-kafka = ">=2.8.0,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
